--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     />
 
     <style>
+        * {
+            font-family: 'Courier New', Courier, monospace;
+        }
       .zadanie {
         display: flex;
         justify-content: center;
       }
       .header {
         display: flex;
-        font-size: 36px;
+        font-size: 37px;
         font-weight: bold;
         margin-bottom: 40px;
       }
@@ -181,6 +184,9 @@
           </div>
         </div>
         <form action="" class="contact"><h1>Kontakt</h1>
+            <div class="row">
+
+            <div class="col-lg-6 col-12">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Imię</label>
         <input type="email" class="form-control" id="exampleFormControlInput1">
@@ -200,6 +206,8 @@
         <option>KIERUNEK ZARZĄDZANIE, STACJONARNE</option>
         <option>KIERUNEK EKONOMIA, STACJONARNE</option>
       </select>
+    </div>
+    <div class="col-lg-6 col-12">
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Dodatkowe uwagi</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -208,6 +216,8 @@
         <button type="submit" class="btn btn-dager">Reset</button>
       </div>
       </div>
+    </div>
+</div>
     </form>
     </section>
     <script
